    hopefully better Mobile support, Theme JS includes now helper variables like SX.isTouch, SX.isMobile, SX.viewportWidth and SX.UA,
    for more information refer to uploads/simplex/js/ functions.js (note: Theme is using functions.min.js), dropped IE7 support, NOT!! tested in Windows Mobile
  
Core - Bug Reports
  - #9721 There's no check if changelog.txt exists

Core - Feature Requests:
  - #4178 Improve behaviour of cms_selflink
  - #9270 More visible indication of "Site Down" status
  
FileManager
  - Numerous UI improvements
  - Adds ajaxy image cropping/resizing/rotation
  
MenuManager
  - Deprecated

Navigator
  - New module to replace MenuManager
  
MicroTiny
  - Complete rewrite
  - Now uses tinymce 4.0.12

AdminSearch
  - New module for searching for tags and any content in templates

CMSContentManager
  - New module for content editing.
  - Pagination and filtering in listcontent
  - Implements content locking
  - Implements dirty form checking 

DesignManager
  - New module for managing templates, stylesheets
  - Implements dirty form checking
  - Implements locking for templates
 
News 
  - Each article now has a searchable option
  - More bulk actions
  - A dropdown field type
  - The ability to re-organize categories
  - Numerous UI improvements
  - Minor bug fixes
  - Implements dirty form checking
  - Query rework (post date is now used as a start date if expiry is not specified)
  - Rewrote fesubmit action to show new 2.0 form functionality (fesubmit action is still deprecated)

Search
  - No longer indexes templates, or GCB's
  - rewrite the re-index stuff to hopefully use a bit less memory (at least for content pages)

ModuleManager
  - Compete rewrite
  - Includes functionality to interact with local modules
  - Now shows release dates and approximate download counts for each module
  - Now shows summary of releases for a specific module
  - Visual indicators for stale and new modules
  
  
Version 1.11.10 - Pinzon
------------------------